Fix text alignment

--- a/personal-portfolio/css/style.css
+++ b/personal-portfolio/css/style.css
@@ -1691,6 +1691,7 @@ li.skills {
   color: #3a4a42;
   line-height: 16px;
   margin: 5px;
+  padding-bottom: 16px;
 }
 
 .modal-section .modal-paragraph {
